Fixed whitespace on contentbox.

--- a/src/siyavula.app/siyavula/app/static/main.css
+++ b/src/siyavula.app/siyavula/app/static/main.css
@@ -139,6 +139,7 @@ a {
     -webkit-border-radius: 8px;
     border-radius: 8px;
     margin-bottom: 2em;
+    padding: 0 2.5em 0 2em;
 }
 
 .contentbox h1 {
@@ -150,7 +151,7 @@ a {
 
 .contentimage {
     float: left;
-    margin: 2em 2em 1em 2em;
+    margin: 2em 2em 1em 0;
     border: 1px solid black;
 }
 
